<resources>
    <string name="app_name">My Application</string>
    <string name="first_fragment">First Fragment PO</string>
    <string name="second_fragment">Second Fragment</string>
    <string name="Books_Library">Books Library</string>
    <string name="best_sellers">Best Sellers</string>
    <string name="books">Books</string>
    <string name="stories">Stories</string>
    <string name="movies">Movies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter">Filter</string>
    <string name="home">Home</string>
    <string name="arts">Arts</string>
    <string name="automobiles">Automobiles</string>
    <string name="business">Business</string>
</resources>